--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -16,7 +16,7 @@ source-paths: ["models"]
 analysis-paths: ["analysis"]
 test-paths: ["tests"]
 data-paths: ["data"]
-macro-paths: ["macros", "macros2"]
+macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
 target-path: "target"  # directory which will store compiled SQL files
