--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         python: ["3.8.x"]
-        dbt: ["1.0.4"]
+        dbt: ["1.3.*"]
 
     steps:
       - uses: actions/checkout@v2
@@ -29,7 +29,7 @@ jobs:
 
       - name: Install dbt
         run: |
-          pip install dbt-postgres==${{ matrix.dbt }}
+          pip install 'dbt-postgres==${{ matrix.dbt }}'
 
       - name: Install dbt packages
         run: |
